

[package]
name        = "mediaframe"
version     = "0.1.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Findit-AI/mediaframe"
homepage    = "https://github.com/Findit-AI/mediaframe"
documentation = "https://docs.rs/mediaframe"
description = "A common media-stream descriptor vocabulary (pixel-format, colour, and frame metadata for video — audio/subtitle to follow) for media processing pipelines."
keywords    = ["media", "video", "pixel-format", "color"]
categories  = ["multimedia", "multimedia::video", "no-std", "no-std::no-alloc"]
rust-version = "1.95.0"

[features]
default = ["std"]
# `alloc` pulls in `smol_str` for the codec / subtitle / audio / container /
# capture modules' `Other(SmolStr)` arms and `icu_locid` for the `lang::Language`
# BCP-47 subtag wrapper. Without `alloc` those modules are `cfg`-out entirely
# (see `lib.rs`), so a `--no-default-features` build genuinely has no allocator
# dependency and the `no-std::no-alloc` category claim holds. `derive_more`'s
# `unwrap` / `try_unwrap` features are flipped on here too: they are only
# consumed by mixed enums (e.g. `SubtitleFormat`) that live under the same
# `alloc` gate.
alloc   = ["dep:smol_str", "dep:icu_locid", "dep:bytes", "derive_more/unwrap", "derive_more/try_unwrap"]
std     = ["alloc", "thiserror/default", "smol_str?/std", "bytes?/std"]
# `buffa` implies `alloc` because the wire impls for the audio /
# container `Other(SmolStr)` arms pull in `smol_str` (and `Vec<u8>`
# for the byte-payload types).
buffa   = ["dep:buffa", "mediatime/buffa", "alloc"]

# Umbrella — enables every per-family sub-feature below.
frame = [
  "yuv-planar", "yuv-semi-planar", "yuva", "yuv-packed", "yuv-444-packed",
  "y2xx", "v210", "rgb", "rgb-float", "rgb-legacy", "gbr", "gray",
  "bayer", "xyz", "mono",
]

yuv-planar      = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuv-semi-planar = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuva            = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuv-packed      = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuv-444-packed  = ["derive_more/try_unwrap", "derive_more/unwrap"]
y2xx            = ["derive_more/try_unwrap", "derive_more/unwrap"]
v210            = ["derive_more/try_unwrap", "derive_more/unwrap"]
rgb             = ["derive_more/try_unwrap", "derive_more/unwrap"]
rgb-float       = ["derive_more/try_unwrap", "derive_more/unwrap", "dep:half"]
rgb-legacy      = ["derive_more/try_unwrap", "derive_more/unwrap"]
gbr             = ["derive_more/try_unwrap", "derive_more/unwrap", "dep:half"]
gray            = ["derive_more/try_unwrap", "derive_more/unwrap", "dep:half"]
bayer           = ["derive_more/try_unwrap", "derive_more/unwrap"]
xyz             = ["derive_more/try_unwrap", "derive_more/unwrap"]
mono            = ["derive_more/try_unwrap", "derive_more/unwrap"]

[dependencies]
bitflags    = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display", "is_variant"] }
mediatime   = { version = "0.1", default-features = false }
thiserror   = { version = "2", default-features = false }
half        = { version = "2", default-features = false, optional = true }
# BCP-47 language-tag parser/validator backing the `lang::Language` wrapper.
# Optional + gated on the `alloc` feature: `icu_locid` 1.5 itself uses
# `extern crate alloc` unconditionally, so a true no-alloc build
# (`--no-default-features`) must not pull it in. The `lang` module is
# therefore `cfg`-ed on `any(feature = "std", feature = "alloc")`, same as
# the `codec` module. The 1.95 MSRV is well above icu_locid's 1.67 floor.
icu_locid   = { version = "1.5", default-features = false, optional = true }
# Cheap-clone (O(1) refcount), immutable byte payloads for the `audio`
# cover-art / fingerprint blobs. Optional + gated on `alloc` (it needs the
# allocator); `default-features = false` keeps it no-std. `Bytes::from(Vec<u8>)`
# adopts the buffer with no copy, so wire decode (`decode_bytes` -> `Vec<u8>`)
# converts for free.
bytes       = { version = "1", default-features = false, optional = true }
buffa       = { version = "0.6", default-features = false, optional = true }
# Used by the `codec` module's `Other(SmolStr)` escape arms. Optional + gated
# on the `alloc` feature (which `std` implies) so a true no-alloc build
# (`--no-default-features`) does not drag in `smol_str` or its `alloc`
# dependency. The `std` feature flips `smol_str/std` on via `smol_str?/std`.
smol_str    = { version = "0.3", default-features = false, optional = true }

[profile.bench]
opt-level         = 3
debug             = false
codegen-units     = 1
lto               = 'thin'
incremental       = false
debug-assertions  = false
overflow-checks   = false
rpath             = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true


