

[package]
name        = "mediaframe"
version     = "0.1.1"
edition     = "2024"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Findit-AI/mediaframe"
homepage    = "https://github.com/Findit-AI/mediaframe"
documentation = "https://docs.rs/mediaframe"
description = "A common media-stream descriptor vocabulary (pixel-format, colour, and frame metadata for video — audio/subtitle to follow) for media processing pipelines."
keywords    = ["media", "video", "pixel-format", "color"]
categories  = ["multimedia", "multimedia::video", "no-std", "no-std::no-alloc"]
rust-version = "1.95.0"

[features]
default = ["std"]
alloc   = ["dep:smol_str", "dep:icu_locale_core", "icu_locale_core/alloc", "dep:bytes", "derive_more/unwrap", "derive_more/try_unwrap"]
std     = ["alloc", "thiserror/default", "smol_str?/std", "bytes?/std"]
buffa   = ["dep:buffa", "mediatime/buffa", "alloc"]
# Optional `serde` (de)serialization for the descriptor vocabulary.
# Orthogonal to the capability tiers: the no-alloc Copy types (colour /
# pixel-format / frame geometry / disposition) gain serde under bare
# `--features serde`; the heap-tier types (codecs, container/subtitle
# formats, audio metadata, capture, language) gain it when `alloc`/`std`
# is also on, forwarding `serde` to `smol_str` / `bytes` for their string
# / byte fields. The wire shape mirrors the storage backends: open
# codec/format enums serialize as their `as_str()` slug, closed
# FFmpeg-coded enums as their `to_u32()` integer.
serde   = ["dep:serde", "smol_str?/serde", "bytes?/serde"]
# Optional `arbitrary::Arbitrary` for the descriptor vocabulary (fuzzing /
# property tests). Std-only — the `arbitrary` crate itself is std-based (it
# exposes no `alloc`/`no_std` feature and its crate root uses `std`), so this
# feature can only ever serve host-side fuzzing, never an embedded / no-std
# target. It pulls `std` (which includes `alloc` for the String/Vec/byte
# generation) to make that contract honest.
arbitrary  = ["std", "dep:arbitrary"]
# Native `quickcheck::Arbitrary` for the descriptor vocabulary via the
# `quickcheck-richderive` derive (container-level `with = "..."` on each type
# points at a `fn(&mut Gen) -> Self` helper in `mediaframe::quickcheck_helpers`,
# so validated `try_new` types stay valid by construction and open
# `Other(SmolStr)` arms get exercised). Std-only because `quickcheck` itself
# requires std; no dependency on the `arbitrary` feature.
quickcheck = ["std", "dep:quickcheck", "dep:quickcheck-richderive"]

frame = [
  "yuv-planar", "yuv-semi-planar", "yuva", "yuv-packed", "yuv-444-packed",
  "y2xx", "v210", "rgb", "rgb-float", "rgb-legacy", "gbr", "gray",
  "bayer", "xyz", "mono",
]

yuv-planar      = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuv-semi-planar = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuva            = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuv-packed      = ["derive_more/try_unwrap", "derive_more/unwrap"]
yuv-444-packed  = ["derive_more/try_unwrap", "derive_more/unwrap"]
y2xx            = ["derive_more/try_unwrap", "derive_more/unwrap"]
v210            = ["derive_more/try_unwrap", "derive_more/unwrap"]
rgb             = ["derive_more/try_unwrap", "derive_more/unwrap"]
rgb-float       = ["derive_more/try_unwrap", "derive_more/unwrap", "dep:half"]
rgb-legacy      = ["derive_more/try_unwrap", "derive_more/unwrap"]
gbr             = ["derive_more/try_unwrap", "derive_more/unwrap", "dep:half"]
gray            = ["derive_more/try_unwrap", "derive_more/unwrap", "dep:half"]
bayer           = ["derive_more/try_unwrap", "derive_more/unwrap"]
xyz             = ["derive_more/try_unwrap", "derive_more/unwrap"]
mono            = ["derive_more/try_unwrap", "derive_more/unwrap"]

[dependencies]
bitflags    = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false, features = ["display", "is_variant"] }
mediatime   = { version = "0.1", default-features = false }
thiserror   = { version = "2", default-features = false }
half        = { version = "2", default-features = false, optional = true }
icu_locale_core = { version = "2", default-features = false, optional = true }
bytes       = { version = "1", default-features = false, optional = true }
buffa       = { version = "0.6", default-features = false, optional = true }
smol_str    = { version = "0.3", default-features = false, optional = true }
# `serde` is no-std by default (`default-features = false`); the `derive`
# feature pulls `serde_derive` for the struct/enum impls. No `alloc`/`std`
# serde feature is needed — string handling goes through borrowed-`&str`
# visitors and `smol_str` / `bytes` carry their own serde impls.
serde       = { version = "1", default-features = false, optional = true, features = ["derive"] }
# `arbitrary` 1.x is a std-based crate (no `alloc`/`no_std` feature, crate
# root uses `std`); `default-features = false` is a no-op kept for form. The
# mediaframe `arbitrary` feature pulls `std` — see its comment above.
arbitrary   = { version = "1", default-features = false, optional = true }
# `quickcheck` is std-only (no `default-features = false` knob);
# `quickcheck-richderive` is the proc-macro that emits native `impl
# quickcheck::Arbitrary` (rich attribute surface — `with`/`shrink`/`bound`/
# `box`/`default`/`skip`). The `quickcheck` feature gates both.
quickcheck            = { version = "1", optional = true }
# Temporary git dep on the unreleased serde-style branch. Flip to
# `{ version = "0.2", optional = true }` once 0.2.0 is published.
quickcheck-richderive = { git = "https://github.com/al8n/quickcheck-richderive", branch = "feat/serde-style-attrs", optional = true }

[dev-dependencies]
# Concrete serde formats for the `serde` round-trip tests (std-only).
# `serde_json` covers the human-readable path; `postcard` covers the
# non-self-describing binary path used by `SampleFormat`'s tagged wire.
serde_json  = "1"
postcard    = { version = "1", default-features = false, features = ["alloc"] }

[profile.bench]
opt-level         = 3
debug             = false
codegen-units     = 1
lto               = 'thin'
incremental       = false
debug-assertions  = false
overflow-checks   = false
rpath             = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true


